--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<p>Some believe the unicorns are still out there. Secretly making the world a more magical place. Some say they will reveal themselves to those with a pure heart and grant them wishes!</p>
 	</div>
 	<div class="sep"></div>
-	<img src="https://i.imgur.com/xOhFW16.png" width= "400" height= "231" alt="Unicorns"> 
+	<img src="https://i.imgur.com/xOhFW16.png"  alt="Unicorns" style="width:400px;height:231px;"> 
 	
 	<footer>
 		Made by PHLOX from <a href="https://www.instagram.com/maggiepinkien/">Instagram</a>
