story section, footer styling
Also added some HTML and changed a few other bits of CSS

--- a/index.html
+++ b/index.html
@@ -37,27 +37,31 @@
 	</div>
 	<div class="sep"></div>
 	<div class="story" id="story">
-		<ul class="nb-list">
-			<li class="deepskyblue">Love</li>
-			<li class="gray">&nbsp;</li>
-			<li class="pink dragging">Magic</li>
-			<li class="mediumpurple">Friendship</li>
-			<li class="deepskyblue">Fun</li>
-			<li class="pink">Adventures</li>
-			<li class="mediumpurple">Sparkles</li>
-			<li class="deepskyblue">Cupcakes</li>
-		</ul>
-		<h3>Left: Things We Find Important<br/>
-		Below: Our Story</h3>
-		<p>Once upon a time, these magical creatures roamed the lands. They were always helping others with their unicorn magic.</p>
-		<p>Until one day the unicorns were hunted by evil greedy people so they could have their magic all to themselves.</p>
-		<p>Some believe the unicorns are still out there. Secretly making the world a more magical place. Some say they will reveal themselves to those with a pure heart and grant them wishes!</p>
+		<div class="wrapper">
+			<ul class="nb-list">
+				<li class="deepskyblue">Love</li>
+				<li class="gray">&nbsp;</li>
+				<li class="pink dragging">Magic</li>
+				<li class="mediumpurple">Friendship</li>
+				<li class="deepskyblue">Fun</li>
+				<li class="pink">Adventures</li>
+				<li class="mediumpurple">Sparkles</li>
+				<li class="deepskyblue">Cupcakes</li>
+			</ul>
+			<h3>Left: Things We Find Important<br/>
+			Below: Our Story</h3>
+			<p>Once upon a time, these magical creatures roamed the lands. They were always helping others with their unicorn magic.</p>
+			<p>Until one day the unicorns were hunted by evil greedy people so they could have their magic all to themselves.</p>
+			<p>Some believe the unicorns are still out there. Secretly making the world a more magical place. Some say they will reveal themselves to those with a pure heart and grant them wishes!</p>
+		</div>
 	</div>
 	<div class="sep"></div>
-	<img src="https://i.imgur.com/xOhFW16.png"  alt="Unicorns" style="width:400px;height:231px;"> 
+	<img class="uni-img" src="https://i.imgur.com/xOhFW16.png"  alt="Unicorns" style="width:400px;height:231px;"> 
 	
 	<footer>
-		Made by Maggie from <a href="https://www.instagram.com/maggiepinkien/">Instagram</a>
+		<div class="wrapper">
+			Made by Maggie from <a href="https://www.instagram.com/maggiepinkien/">Instagram</a>
+		</div>
 	</footer>
 	<div class="popup">
 		<div class="blanket"></div>
